--- a/cargo/src/app/app.component.html
+++ b/cargo/src/app/app.component.html
@@ -1,1 +1,12 @@
-<h1>Сервис грузоперевозок</h1>
+<div class="container">
+    <nav>
+        <ul>
+            <li><a routerLink="/" routerLinkActive="active">Главная</a></li>
+            <li><a routerLink="/customer" routerLinkActive="active">Пользователи</a></li>
+        </ul>
+    </nav>
+    <router-outlet>
+            
+    </router-outlet>
+    
+</div>
